unpackaged/main/default/objects/Case/fields/Method_of_Commission_Payment__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Commission_Payment__c</fullName>
    <label>Method of Commission Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Pay Pal</fullName>
            </value>
            <value>
                <fullName>Venmo</fullName>
            </value>
            <value>
                <fullName>Wire/ACH</fullName>
            </value>
            <value>
                <fullName>Zelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>