unpackaged/main/default/objects/Case/fields/Method_of_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Reimbursement__c</fullName>
    <label>Method of Reimbursement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Petty Cash</fullName>
            </value>
            <value>
                <fullName>Lindsi Cash</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Venmo</fullName>
            </value>
            <value>
                <fullName>Zelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>