unpackaged/main/default/objects/Case/fields/Method_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Shipment__c</fullName>
    <label>Method of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>Messenger</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Insider Team Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>