unpackaged/main/default/objects/Case/fields/Monthly_Billing__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Billing</label>
    <referenceTo>Monthly_Billing__c</referenceTo>
    <relationshipLabel>Logbooks</relationshipLabel>
    <relationshipName>Logbooks</relationshipName>
    <type>Lookup</type>
</CustomField>