unpackaged/main/default/objects/Case/fields/Name_of_Boat_Yacht__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Boat_Yacht__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Boat/Yacht</label>
    <length>255</length>
    <type>Text</type>
</CustomField>