unpackaged/main/default/objects/Case/fields/Name_of_Travelers__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Travelers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Travelers</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>