unpackaged/main/default/objects/Case/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>