unpackaged/main/default/objects/Case/fields/Note_Card__c.field-meta.xml
<CustomField>
    <fullName>Note_Card__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>