unpackaged/main/default/objects/Case/fields/Notes_on_How_Check_was_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Notes_on_How_Check_was_Distributed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes on How Check was Distributed</label>
    <type>TextArea</type>
</CustomField>