unpackaged/main/default/objects/Case/fields/Notes_Pickup_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Notes_Pickup_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instructions</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>