unpackaged/main/default/objects/Case/fields/Number_in_Party__c.field-meta.xml
<CustomField>
    <fullName>Number_in_Party__c</fullName>
    <label>Number in Party</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>