unpackaged/main/default/objects/Case/fields/Number_of_Days_Rental__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Rental__c</fullName>
    <label>Number of Days Rental</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>