unpackaged/main/default/objects/Case/fields/Occasion__c.field-meta.xml
<CustomField>
    <fullName>Occasion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Occasion / Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>