unpackaged/main/default/objects/Case/fields/Occasion_reason_rich__c.field-meta.xml
<CustomField>
    <fullName>Occasion_reason_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Occasion/reason</label>
    <length>500</length>
    <type>Html</type>
</CustomField>