unpackaged/main/default/objects/Case/fields/of_Nights__c.field-meta.xml
<CustomField>
    <fullName>of_Nights__c</fullName>
    <label>Number of Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>