unpackaged/main/default/objects/Case/fields/On_Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>On-Site Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>