unpackaged/main/default/objects/Case/fields/Order_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For Flight Bookings, please list confirmation numbers with airline in parenthesis. E.g., 123 (Air Canada), 3456 (United)</inlineHelpText>
    <label>Order/Confirmation #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>