unpackaged/main/default/objects/Case/fields/Original_Clone__c.field-meta.xml
<CustomField>
    <fullName>Original_Clone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Clone</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cloned Logbooks</relationshipLabel>
    <relationshipName>Logbooks</relationshipName>
    <type>Lookup</type>
</CustomField>