unpackaged/main/default/objects/Case/fields/Package_pass_details_rich__c.field-meta.xml
<CustomField>
    <fullName>Package_pass_details_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Package/pass details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>