unpackaged/main/default/objects/Case/fields/Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicate which PayPal or Venmo acct used, check #, wire info, etc.</inlineHelpText>
    <label>Additional Payment Notes</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>