unpackaged/main/default/objects/Case/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Paying Directly</fullName>
            </value>
            <value>
                <fullName>Insider Paid</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Petty Cash</fullName>
            </value>
            <value>
                <fullName>Lindsi Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Team Member's Personal Card</fullName>
            </value>
            <value>
                <fullName>Insider Inventory</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Venmo</fullName>
            </value>
            <value>
                <fullName>Zelle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>*Not Applicable</fullName>
                <label>*Not Applicable/No Card On File</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>