unpackaged/main/default/objects/Case/fields/Person_Using__c.field-meta.xml
<CustomField>
    <fullName>Person_Using__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Using</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Logbooks (Person Using)</relationshipLabel>
    <relationshipName>Logbooks3</relationshipName>
    <type>Lookup</type>
</CustomField>