unpackaged/main/default/objects/Case/fields/Person_Using_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Using_Name__c</fullName>
    <formula>Person_Using__r.FirstName &amp; " " &amp; Person_Using__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Using Name</label>
    <type>Text</type>
</CustomField>