unpackaged/main/default/objects/Case/fields/Pick_Up__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pick Up and Drop Off</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>