unpackaged/main/default/objects/Case/fields/Pick_Up_Location_and_Address__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Location_and_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pick Up Location and Address</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>