unpackaged/main/default/objects/Case/fields/Pickup_Contact__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pick Up Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>