unpackaged/main/default/objects/Case/fields/Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pick Up Date</label>
    <type>Date</type>
</CustomField>