unpackaged/main/default/objects/Case/fields/Pickup_Day__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Day__c</fullName>
    <formula>CASE(
MOD( Pickup_Date__c - DATE( 1900, 1, 7 ), 7 ),
0, "Sunday",
1, "Monday",
2, "Tuesday",
3, "Wednesday",
4, "Thursday",
5, "Friday",
"Saturday"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pick Up Day</label>
    <type>Text</type>
</CustomField>