unpackaged/main/default/objects/Case/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pick Up Location (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Logbooks (Pickup Location)</relationshipLabel>
    <relationshipName>PickupLocationLogbooks</relationshipName>
    <type>Lookup</type>
</CustomField>