unpackaged/main/default/objects/Case/fields/Pickup_Location_Phone__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pick Up Location Phone</label>
    <type>Phone</type>
</CustomField>