unpackaged/main/default/objects/Case/fields/Pickup_Location_Phone_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location_Phone_Formatted__c</fullName>
    <formula>IF(LEN( Pickup_Location_Phone__c ) = 10, 
"(" &amp; LEFT(Pickup_Location_Phone__c, 3) &amp; ") " &amp; RIGHT(LEFT(Pickup_Location_Phone__c, 6), 3) &amp; "-" &amp; RIGHT(Pickup_Location_Phone__c, 4), Pickup_Location_Phone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pick Up Location Phone Formatted</label>
    <type>Text</type>
</CustomField>