unpackaged/main/default/objects/Case/fields/Pickup_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Time__c</fullName>
    <label>Pick Up Time</label>
    <type>Time</type>
</CustomField>