unpackaged/main/default/objects/Case/fields/PreventClone__c.field-meta.xml
<CustomField>
    <fullName>PreventClone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PreventClone</label>
    <type>Checkbox</type>
</CustomField>