unpackaged/main/default/objects/Case/fields/Price_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Day__c</fullName>
    <label>Price per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>