unpackaged/main/default/objects/Case/fields/Price_per_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Ticket__c</fullName>
    <label>Price per Ticket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>