unpackaged/main/default/objects/Case/fields/Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price__c</fullName>
    <description>Quoted Price of a reservation or service for Logbooks.</description>
    <inlineHelpText>Quoted Price of a reservation or service for Logbooks.</inlineHelpText>
    <label>Quoted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>