unpackaged/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Logbook Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alerts</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Booking Platform/Just Called</fullName>
            </value>
            <value>
                <fullName>Closing Logbook</fullName>
            </value>
            <value>
                <fullName>ClouDNA Holding</fullName>
            </value>
            <value>
                <fullName>Confirmed Request - Contact</fullName>
            </value>
            <value>
                <fullName>Confirmed Request - Other</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Contact Denied</fullName>
            </value>
            <value>
                <fullName>Contact Ghosted</fullName>
            </value>
            <value>
                <fullName>Coronavirus</fullName>
            </value>
            <value>
                <fullName>Doesn’t Exist</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
            <value>
                <fullName>Never Tried For</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>No One Used - Cancelled</fullName>
            </value>
            <value>
                <fullName>No One Used - Insider Filled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pending Request</fullName>
            </value>
            <value>
                <fullName>Private Event/Buyout</fullName>
            </value>
            <value>
                <fullName>Taken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>