unpackaged/main/default/objects/Case/fields/Recalc__c.field-meta.xml
<CustomField>
    <fullName>Recalc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalc</label>
    <type>Checkbox</type>
</CustomField>