unpackaged/main/default/objects/Case/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>