unpackaged/main/default/objects/Case/fields/Recipient_Address__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Address__c</fullName>
    <formula>Recipient_Name__r.MailingStreet &amp; ", " &amp; Recipient_Name__r.MailingCity &amp; ", " &amp; Recipient_Name__r.MailingState &amp; ", " &amp; Recipient_Name__r.MailingPostalCode &amp; ", " &amp; Recipient_Name__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Address</label>
    <type>Text</type>
</CustomField>