unpackaged/main/default/objects/Case/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recipient Logbooks</relationshipLabel>
    <relationshipName>RecipientLogbooks</relationshipName>
    <type>Lookup</type>
</CustomField>