unpackaged/main/default/objects/Case/fields/Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone__c</fullName>
    <formula>IF(LEN(Recipient_Name__r.Phone) = 10,
"(" &amp; LEFT(Recipient_Name__r.Phone, 3) &amp; ") " &amp; RIGHT(LEFT(Recipient_Name__r.Phone, 6), 3) &amp; "-" &amp; RIGHT(Recipient_Name__r.Phone, 4), Recipient_Name__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Phone</label>
    <type>Text</type>
</CustomField>