unpackaged/main/default/objects/Case/fields/Recipient_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Recipient_s_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient's Address</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>