unpackaged/main/default/objects/Case/fields/Recipient_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recipient_s_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient's Phone</label>
    <type>Phone</type>
</CustomField>