unpackaged/main/default/objects/Case/fields/Recipient_s_Phone_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Recipient_s_Phone_Formatted__c</fullName>
    <formula>IF(LEN(Recipient_s_Phone__c) = 10,
"(" &amp; LEFT(Recipient_s_Phone__c, 3) &amp; ") " &amp; RIGHT(LEFT(Recipient_s_Phone__c, 6), 3) &amp; "-" &amp; RIGHT(Recipient_s_Phone__c, 4), Recipient_s_Phone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient's Phone Formatted</label>
    <type>Text</type>
</CustomField>