unpackaged/main/default/objects/Case/fields/Reconfirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reconfirmation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reconfirmation Date/Time</label>
    <type>DateTime</type>
</CustomField>