unpackaged/main/default/objects/Case/fields/Reconfirmation_Date_for_Email__c.field-meta.xml
<CustomField>
    <fullName>Reconfirmation_Date_for_Email__c</fullName>
    <formula>Reconfirmation_Date__c + ($User.Time_Zone_Offset__c/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reconfirmation Date for Email</label>
    <type>DateTime</type>
</CustomField>