unpackaged/main/default/objects/Case/fields/Reconfirmation_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Reconfirmation_Reminder_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reconfirmation Reminder Date</label>
    <type>Date</type>
</CustomField>