unpackaged/main/default/objects/Case/fields/Reconfirmed_With__c.field-meta.xml
<CustomField>
    <fullName>Reconfirmed_With__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reconfirmed With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>