unpackaged/main/default/objects/Case/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>