unpackaged/main/default/objects/Case/fields/Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Reference_Date__c</fullName>
    <formula>IF(ISBLANK(CASE(RecordType.DeveloperName,
'Amenity_Order', Delivery_Date__c,
'Service_Booking', Date__c,
'Car_Rental', Pickup_Date__c,
'Car_Service', Pickup_Date__c,
'Charter', Date_of_Departure__c,
'DiningReservation', Date__c,
'Errand', Date__c,
'Event_Booking', Date__c,
'Event_Tickets', Date__c,
'Flight_Booking_Single_Person', Date__c,
'Floral_Booking', Delivery_Date__c,
'General_Initial_Request', Requested_Booking_Date__c,
'Hotel_Booking', Check_In_Date__c,
'House', Date__c,
'House_Villa_Booking', Check_In_Date__c,
'Internal', Date__c,
'Messenger_Service', Pickup_Date__c,
'Nightclub_Lounge_Reservation', Date__c,
'Package_Log', Date__c,
'Tour_Booking', DateofBooking__c,
'Train_Booking', Date_of_Departure__c,
'Trip_Booking', Date_of_Departure__c,
'Travel_Planning', Date_of_Departure__c,
'Research', Date__c,
NULL)),

DATEVALUE(CreatedDate),

CASE(RecordType.DeveloperName,
'Amenity_Order', Delivery_Date__c,
'Service_Booking', Date__c,
'Car_Rental', Pickup_Date__c,
'Car_Service', Pickup_Date__c,
'Charter', Date_of_Departure__c,
'DiningReservation', Date__c,
'Errand', Date__c,
'Event_Booking', Date__c,
'Event_Tickets', Date__c,
'Flight_Booking_Single_Person', Date__c,
'Floral_Booking', Delivery_Date__c,
'General_Initial_Request', Requested_Booking_Date__c,
'Hotel_Booking', Check_In_Date__c,
'House', Date__c,
'House_Villa_Booking', Check_In_Date__c,
'Internal', Date__c,
'Messenger_Service', Pickup_Date__c,
'Nightclub_Lounge_Reservation', Date__c,
'Package_Log', Date__c,
'Tour_Booking', DateofBooking__c,
'Train_Booking', Date_of_Departure__c,
'Trip_Booking', Date_of_Departure__c,
'Travel_Planning', Date_of_Departure__c,
'Research', Date__c,
NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Date</label>
    <type>Date</type>
</CustomField>