unpackaged/main/default/objects/Case/fields/Reference_Given_to_Messenger_Service__c.field-meta.xml
<CustomField>
    <fullName>Reference_Given_to_Messenger_Service__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Given to Messenger Service</label>
    <type>TextArea</type>
</CustomField>