unpackaged/main/default/objects/Case/fields/ReferenceDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReferenceDateTime__c</fullName>
    <formula>/*DATETIMEVALUE(TEXT(YEAR(Reference_Date__c)) &amp; "-" &amp; TEXT(MONTH(Reference_Date__c)) &amp; "-" &amp; TEXT(DAY(Reference_Date__c)) &amp; " " &amp; TEXT(HOUR(Time_Real__c)) &amp; ":" &amp; TEXT(MINUTE(Time_real__c)) &amp; ":00") */

DATETIMEVALUE( TEXT(Reference_Date__c - (5/24))&amp;' '&amp; LEFT(TEXT(SortTime__c), 8) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReferenceDateTime</label>
    <type>DateTime</type>
</CustomField>