unpackaged/main/default/objects/Case/fields/Refund_Notes__c.field-meta.xml
<CustomField>
    <fullName>Refund_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refund Notes</label>
    <type>TextArea</type>
</CustomField>