unpackaged/main/default/objects/Case/fields/Refund_Received__c.field-meta.xml
<CustomField>
    <fullName>Refund_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refund Received</label>
    <type>Date</type>
</CustomField>