unpackaged/main/default/objects/Case/fields/Refundable_Non_Refundable_rich__c.field-meta.xml
<CustomField>
    <fullName>Refundable_Non_Refundable_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refundable/Non-Refundable</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>