unpackaged/main/default/objects/Case/fields/Rental_Address__c.field-meta.xml
<CustomField>
    <fullName>Rental_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rental Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>