unpackaged/main/default/objects/Case/fields/Requested_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Booking_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Booking Date</label>
    <type>Date</type>
</CustomField>