unpackaged/main/default/objects/Case/fields/Requested_Booking_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Booking_Time__c</fullName>
    <label>Requested Booking Time</label>
    <type>Time</type>
</CustomField>