unpackaged/main/default/objects/Case/fields/Requested_By_Someone_Else__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Someone_Else__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Logbooks (Requested By)</relationshipLabel>
    <relationshipName>Logbooks</relationshipName>
    <type>Lookup</type>
</CustomField>