unpackaged/main/default/objects/Case/fields/Requested_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>