unpackaged/main/default/objects/Case/fields/Research__c.field-meta.xml
<CustomField>
    <fullName>Research__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Research</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>