unpackaged/main/default/objects/Case/fields/Research_rich__c.field-meta.xml
<CustomField>
    <fullName>Research_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Research</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>