unpackaged/main/default/objects/Case/fields/Resy_Language__c.field-meta.xml
<CustomField>
    <fullName>Resy_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resy Language</label>
    <type>Checkbox</type>
</CustomField>