unpackaged/main/default/objects/Case/fields/Return_Policy__c.field-meta.xml
<CustomField>
    <fullName>Return_Policy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Return Policy</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>