unpackaged/main/default/objects/Case/fields/Return_policy_rich__c.field-meta.xml
<CustomField>
    <fullName>Return_policy_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Return policy</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>