unpackaged/main/default/objects/Case/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Date</label>
    <type>DateTime</type>
</CustomField>